Fix toolbar overflow

--- a/css/general.css
+++ b/css/general.css
@@ -299,9 +299,14 @@
 	}
 	.toolbar.narrow, .toolbar_wrapper.narrow > .toolbar {
 		width: fit-content;
+		display: flex;
+		flex-flow: row-reverse;
+		height: 100%;
 	}
-	.toolbar_wrapper.narrow .toolbar .content {
-		float: left;
+	.toolbar.narrow, .toolbar_wrapper.narrow > .toolbar > .content {
+		height: 100%;
+		overflow-x: hidden;
+		overflow-y: auto;
 	}
 	.toolbar_wrapper > .toolbar.vertical {
 		width: 40px;
